--- a/src/locales/es.po
+++ b/src/locales/es.po
@@ -37,7 +37,6 @@ msgstr "Cerrar sesión"
 msgid "Berlin Skylarks Web App"
 msgstr "Aplicación Web de Berlin Skylarks"
 
-#: src/lib/dp/components/navigation/NavigationSheet.svelte
 #: src/routes/+layout.svelte
 msgid "Skylarks Team Logo"
 msgstr "Logotipo del equipo Skylarks"
@@ -56,6 +55,7 @@ msgstr "Correo electrónico <0/> <1>Se le cerrará la sesión y se le indicará 
 
 #: src/lib/dp/auth/ChangeEmailForm.svelte
 #: src/lib/dp/auth/PasswordRequestButton.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/UserDetailsForm.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/utils/DeleteButton.svelte
@@ -100,10 +100,6 @@ msgstr "¿Olvidó su contraseña?"
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Reset Password"
 msgstr "Restablecer la contraseña"
-
-#: src/lib/dp/auth/LoginForm.svelte
-msgid "Sign in to Skylarks Diamond Planner"
-msgstr "Inicie sesión en Skylarks Diamond Planner"
 
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Log In"
@@ -252,6 +248,7 @@ msgstr ""
 msgid "Cancel"
 msgstr "Cancelar"
 
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
 #: src/routes/(tib)/club/+page.svelte
 msgid "Details"
 msgstr "Detalles"
@@ -260,7 +257,6 @@ msgstr "Detalles"
 msgid "More Info"
 msgstr "Más información"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/player/PlayerDataCard.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/club/+page.svelte
@@ -401,7 +397,6 @@ msgstr "DP:"
 msgid "TP:"
 msgstr "TP:"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/ligen/+page.svelte
 msgid "Leagues"
@@ -439,6 +434,7 @@ msgstr "Cargando Ligas..."
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(tib)/club/ballpark/+page.svelte
@@ -503,7 +499,6 @@ msgstr "Playoffs"
 msgid "Graphs and Mood"
 msgstr "Gráficos y estado de ánimo"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamAdminSection.svelte
 #: src/lib/tib/components/match/GamecenterMatchSection.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
@@ -952,7 +947,7 @@ msgstr "Verificado"
 msgid "Unverified"
 msgstr "No verificado"
 
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 #: src/lib/dp/components/forms/TeamGamesModal.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
@@ -1168,7 +1163,6 @@ msgstr "Enviar"
 #: src/lib/dp/components/club/ClubDetailCard.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamListTeaser.svelte
 #: src/lib/dp/components/team/TeamTeaserCard.svelte
 #: src/lib/dp/components/user/PlayerProfileClubsSection.svelte
@@ -1281,6 +1275,7 @@ msgstr "Fin de la serie <0/> <1>No se crearán eventos después de esta fecha.</
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Title <0/>"
 msgstr "Título <0/>"
 
@@ -1294,6 +1289,7 @@ msgstr "Duración <0/> <1>Duración de cada evento para determinar la hora de fi
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Description <0/>"
 msgstr "Descripción <0/>"
@@ -1336,6 +1332,7 @@ msgstr "Crear nuevo equipo"
 msgid "Name <0/>"
 msgstr "Nombre <0/>"
 
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Club <0/>"
 msgstr "Club <0/>"
@@ -1808,12 +1805,10 @@ msgstr "Serie"
 msgid "Player fallback"
 msgstr "Reserva de jugador"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Start"
 msgstr "Inicio"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Favorite"
 msgstr "Favorito"
@@ -1906,13 +1901,13 @@ msgstr "Promedio de fildeo"
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "No puede eliminar el último {0}."
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
 msgstr "Seleccionar para añadir como {0}:"
 
@@ -2313,14 +2308,6 @@ msgstr "Perfil público"
 
 #: src/lib/dp/components/user/PlayerDataProfileSection.svelte
 msgid ""
-"You have the option to display your player data in your public\n"
-"profile on the Skylarks website and apps."
-msgstr ""
-"Tienes la opción de mostrar tus datos de jugador en tu\n"
-"perfil público en el sitio web y las aplicaciones de Skylarks."
-
-#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
-msgid ""
 "Please note that all statistics and basic info such as your name and\n"
 "team affiliation is considered public information when participating\n"
 "in official DBV and BSVBB competitions."
@@ -2417,7 +2404,7 @@ msgstr "Tiempo relativo"
 msgid "Stats for {0} {1}"
 msgstr "Estadísticas de {0} {1}"
 
-#: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
+#: src/lib/dp/components/utils/SeasonSelector.svelte
 msgid "Season <0/>"
 msgstr "Temporada <0/>"
 
@@ -2794,19 +2781,19 @@ msgstr "Victorias Totales"
 msgid "There was an error processing your authentication request."
 msgstr "Ha habido un error al procesar tu solicitud de autenticación."
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Enter"
 msgstr "Entrar"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Backspace"
 msgstr "Retroceso"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Remove tag"
 msgstr "Eliminar etiqueta"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "You have entered a value that is not allowed here."
 msgstr "Has introducido un valor que no está permitido aquí."
 
@@ -2864,124 +2851,124 @@ msgstr "No hay datos disponibles."
 
 #: src/lib/dp/components/comments/CommentRow.svelte
 msgid "Error updating comment"
-msgstr ""
-
-#: src/lib/dp/components/comments/CommentSection.svelte
+msgstr "Error al actualizar el comentario"#: src/lib/dp/components/comments/CommentSection.svelte
 msgid "Failed to add comment."
-msgstr ""
-
-#. placeholder {0}: email
+msgstr "Error al añadir el comentario."#. placeholder {0}: email
 #: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "If we have your email ({0}) on file, you will receive a reset password request in your inbox."
-msgstr ""
-
-#: src/lib/dp/auth/PasswordRequestButton.svelte
+msgstr "Si tenemos tu correo electrónico ({0}) registrado, recibirás una solicitud de restablecimiento de contraseña en tu bandeja de entrada."#: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "Error sending reset password request."
-msgstr ""
-
-#: src/lib/dp/auth/OAuthProviderButton.svelte
+msgstr "Error al enviar la solicitud de restablecimiento de contraseña."#: src/lib/dp/auth/OAuthProviderButton.svelte
 msgid "There was an error processing your authentication request via external provider. Please double-check your signup key"
-msgstr ""
-
-#: src/lib/dp/components/forms/TeamMembersForm.svelte
+msgstr "Hubo un error al procesar tu solicitud de autenticación a través del proveedor externo. Por favor, comprueba tu clave de registro."#: src/lib/dp/components/forms/TeamMembersForm.svelte
 #: src/lib/dp/components/forms/TeamMembersForm.svelte
 msgid "Team members"
-msgstr ""
-
-#: src/lib/dp/components/forms/UniformSetForm.svelte
+msgstr "Miembros del equipo"#: src/lib/dp/components/forms/UniformSetForm.svelte
 msgid ""
 "You can use the special identifiers <0/> and <1/> to get\n"
 "the Skylarks Home and Road Cap instead of a\n"
 "generic colored one."
 msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+"Puedes usar los identificadores especiales <0/> y <1/> para obtener\n"
+"la gorra de local y visitante de los Skylarks en lugar de una\n"
+"genérica de color."#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been added as an admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "El usuario \"{0}\" ha sido añadido como administrador del equipo \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while adding user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Ocurrió un error al añadir al usuario como administrador"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "El usuario \"{0}\" ha sido eliminado como administrador del equipo \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Ocurrió un error al eliminar al usuario como administrador"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as member from team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "El usuario \"{0}\" ha sido eliminado como miembro del equipo \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as team member"
-msgstr ""
-
-#: src/lib/dp/components/forms/ParticipationForm.svelte
+msgstr "Ocurrió un error al eliminar al usuario como miembro del equipo"#: src/lib/dp/components/forms/ParticipationForm.svelte
 msgid "State <0>InMaybeOut</0>"
-msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+msgstr "Estado <0>InMaybeOut</0>"#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Game"
-msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+msgstr "Juego"#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Practice"
-msgstr ""
-
-#. placeholder {0}: modelName
+msgstr "Práctica"#. placeholder {0}: modelName
 #: src/lib/dp/components/utils/DeleteButton.svelte
 msgid "Error deleting {0}."
-msgstr ""
-
-#: src/lib/dp/components/player/TeamPlayerSection.svelte
+msgstr "Error al eliminar {0}."#: src/lib/dp/components/player/TeamPlayerSection.svelte
 msgid "Visualization <0>NumberImage</0>"
-msgstr ""
-
-#: src/routes/(tib)/gamecenter/+page.svelte
+msgstr "Visualización <0>NumberImage</0>"#: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Previous"
-msgstr ""
+msgstr "Anterior"
 
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Current"
-msgstr ""
+msgstr "Actual"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Next"
-msgstr ""
+msgstr "Siguiente"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "All"
-msgstr ""
+msgstr "Todos"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Timeframe"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Plazo"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Sort"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Ordenar"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Ascending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Ascendente"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Descending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Descendente"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Other"
+msgstr "Otro"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "<0/> Create new"
+msgstr "<0/> Crear nuevo"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "Create new Community Service Entry"
+msgstr "Crear nueva entrada de servicio comunitario"#: src/lib/dp/components/navigation/NavigationSheet.svelte
+msgid "Diamond Planner Logo"
+msgstr "Logotipo de Diamond Planner"#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Community Service Entry"
+msgstr "Entrada de servicio comunitario"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Date <0/>"
+msgstr "Fecha <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Duration"
+msgstr "Duración"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Minutes <0/>"
+msgstr "Minutos <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Board Member <0/>"
+msgstr "Miembro de la junta <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Member <0/>"
+msgstr "Miembro <0/>"#: src/lib/dp/auth/LoginForm.svelte
+msgid "Sign in to Diamond Planner"
+msgstr "Iniciar sesión en Diamond Planner"#. placeholder {0}: entry.title
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+msgid "Edit Community Service Entry \"{0}\""
+msgstr "Editar entrada de servicio comunitario \"{0}\""#: src/lib/dp/components/meta/SidebarNavigation.svelte
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "Community Service"
+msgstr "Servicio comunitario"#: src/lib/dp/components/communityservice/TargetVisualizer.svelte
+msgid "Target:"
+msgstr "Objetivo:"#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
+msgid ""
+"You have the option to display your player data in your public\n"
+"profile on the website and apps."
 msgstr ""
+"Tienes la opción de mostrar tus datos de jugador en tu perfil público\n"
+"en el sitio web y las aplicaciones."#. placeholder {0}: set.user.first_name
+#. placeholder {1}: set.user.last_name
+#. placeholder {2}: set.season
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "for {0} {1} ({2})"
+msgstr "para {0} {1} ({2})"
