--- a/src/locales/fr.po
+++ b/src/locales/fr.po
@@ -37,7 +37,6 @@ msgstr "Se déconnecter"
 msgid "Berlin Skylarks Web App"
 msgstr "Application Web des Berlin Skylarks"
 
-#: src/lib/dp/components/navigation/NavigationSheet.svelte
 #: src/routes/+layout.svelte
 msgid "Skylarks Team Logo"
 msgstr "Logo de l’équipe Skylarks"
@@ -56,6 +55,7 @@ msgstr "Courriel <0/> <1>Vous serez déconnecté et recevrez des instructions po
 
 #: src/lib/dp/auth/ChangeEmailForm.svelte
 #: src/lib/dp/auth/PasswordRequestButton.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/UserDetailsForm.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/utils/DeleteButton.svelte
@@ -100,10 +100,6 @@ msgstr "Mot de passe oublié?"
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Reset Password"
 msgstr "Réinitialiser le mot de passe"
-
-#: src/lib/dp/auth/LoginForm.svelte
-msgid "Sign in to Skylarks Diamond Planner"
-msgstr "Connectez-vous à Skylarks Diamond Planner"
 
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Log In"
@@ -252,6 +248,7 @@ msgstr ""
 msgid "Cancel"
 msgstr "Annuler"
 
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
 #: src/routes/(tib)/club/+page.svelte
 msgid "Details"
 msgstr "Détails"
@@ -260,7 +257,6 @@ msgstr "Détails"
 msgid "More Info"
 msgstr "Plus d’infos"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/player/PlayerDataCard.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/club/+page.svelte
@@ -401,7 +397,6 @@ msgstr "DP :"
 msgid "TP:"
 msgstr "TP :"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/ligen/+page.svelte
 msgid "Leagues"
@@ -439,6 +434,7 @@ msgstr "Chargement des ligues..."
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(tib)/club/ballpark/+page.svelte
@@ -503,7 +499,6 @@ msgstr "Séries éliminatoires"
 msgid "Graphs and Mood"
 msgstr "Graphiques et humeur"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamAdminSection.svelte
 #: src/lib/tib/components/match/GamecenterMatchSection.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
@@ -952,7 +947,7 @@ msgstr "Vérifié"
 msgid "Unverified"
 msgstr "Non vérifié"
 
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 #: src/lib/dp/components/forms/TeamGamesModal.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
@@ -1168,7 +1163,6 @@ msgstr "Soumettre"
 #: src/lib/dp/components/club/ClubDetailCard.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamListTeaser.svelte
 #: src/lib/dp/components/team/TeamTeaserCard.svelte
 #: src/lib/dp/components/user/PlayerProfileClubsSection.svelte
@@ -1281,6 +1275,7 @@ msgstr "Fin de la série <0/> <1>Aucun événement ne sera créé après cette d
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Title <0/>"
 msgstr "Titre <0/>"
 
@@ -1294,6 +1289,7 @@ msgstr "Durée <0/> <1>Durée de chaque événement pour déterminer l'heure de 
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Description <0/>"
 msgstr "Description <0/>"
@@ -1336,6 +1332,7 @@ msgstr "Créer une nouvelle équipe"
 msgid "Name <0/>"
 msgstr "Nom <0/>"
 
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Club <0/>"
 msgstr "Club <0/>"
@@ -1808,12 +1805,10 @@ msgstr "Série"
 msgid "Player fallback"
 msgstr "Joueur par défaut"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Start"
 msgstr "Démarrer"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Favorite"
 msgstr "Favoris"
@@ -1906,13 +1901,13 @@ msgstr "Moyenne de jeu"
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "Vous ne pouvez pas supprimer le dernier {0} !"
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
 msgstr "Sélectionnez pour ajouter comme {0} :"
 
@@ -2313,14 +2308,6 @@ msgstr "Profil public"
 
 #: src/lib/dp/components/user/PlayerDataProfileSection.svelte
 msgid ""
-"You have the option to display your player data in your public\n"
-"profile on the Skylarks website and apps."
-msgstr ""
-"Vous avez la possibilité d'afficher vos données de joueur dans votre\n"
-"profil public sur le site web et les applications Skylarks."
-
-#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
-msgid ""
 "Please note that all statistics and basic info such as your name and\n"
 "team affiliation is considered public information when participating\n"
 "in official DBV and BSVBB competitions."
@@ -2417,7 +2404,7 @@ msgstr "Temps relatif"
 msgid "Stats for {0} {1}"
 msgstr "Stats pour {0} {1}"
 
-#: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
+#: src/lib/dp/components/utils/SeasonSelector.svelte
 msgid "Season <0/>"
 msgstr "Saison <0/>"
 
@@ -2791,19 +2778,19 @@ msgstr "Nombre total de victoires"
 msgid "There was an error processing your authentication request."
 msgstr "Une erreur s'est produite lors du traitement de votre demande d'authentification."
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Enter"
 msgstr "Entrée"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Backspace"
 msgstr "Retour arrière"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Remove tag"
 msgstr "Supprimer l'étiquette"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "You have entered a value that is not allowed here."
 msgstr "Vous avez entré une valeur qui n'est pas autorisée ici."
 
@@ -2861,124 +2848,124 @@ msgstr "Aucune donnée disponible."
 
 #: src/lib/dp/components/comments/CommentSection.svelte
 msgid "Failed to add comment."
-msgstr ""
-
-#: src/lib/dp/components/comments/CommentRow.svelte
+msgstr "Échec de l'ajout du commentaire."#: src/lib/dp/components/comments/CommentRow.svelte
 msgid "Error updating comment"
-msgstr ""
-
-#. placeholder {0}: email
+msgstr "Erreur lors de la mise à jour du commentaire"#. placeholder {0}: email
 #: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "If we have your email ({0}) on file, you will receive a reset password request in your inbox."
-msgstr ""
-
-#: src/lib/dp/auth/PasswordRequestButton.svelte
+msgstr "Si nous avons votre adresse e-mail ({0}) dans nos dossiers, vous recevrez une demande de réinitialisation de mot de passe dans votre boîte de réception."#: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "Error sending reset password request."
-msgstr ""
-
-#: src/lib/dp/auth/OAuthProviderButton.svelte
+msgstr "Erreur lors de l'envoi de la demande de réinitialisation de mot de passe."#: src/lib/dp/auth/OAuthProviderButton.svelte
 msgid "There was an error processing your authentication request via external provider. Please double-check your signup key"
-msgstr ""
-
-#: src/lib/dp/components/forms/TeamMembersForm.svelte
+msgstr "Une erreur s'est produite lors du traitement de votre demande d'authentification via un fournisseur externe. Veuillez vérifier votre clé d'inscription."#: src/lib/dp/components/forms/TeamMembersForm.svelte
 #: src/lib/dp/components/forms/TeamMembersForm.svelte
 msgid "Team members"
-msgstr ""
-
-#: src/lib/dp/components/forms/ParticipationForm.svelte
+msgstr "Membres de l'équipe"#: src/lib/dp/components/forms/ParticipationForm.svelte
 msgid "State <0>InMaybeOut</0>"
-msgstr ""
-
-#: src/lib/dp/components/forms/UniformSetForm.svelte
+msgstr "État <0>InMaybeOut</0>"#: src/lib/dp/components/forms/UniformSetForm.svelte
 msgid ""
 "You can use the special identifiers <0/> and <1/> to get\n"
 "the Skylarks Home and Road Cap instead of a\n"
 "generic colored one."
 msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+"Vous pouvez utiliser les identifiants spéciaux <0/> et <1/> pour obtenir\n"
+"la casquette domicile et extérieur des Skylarks au lieu d'une\n"
+"casquette de couleur générique."#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Game"
-msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+msgstr "Match"#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Practice"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Entraînement"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been added as an admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "L'utilisateur \"{0}\" a été ajouté comme administrateur pour l'équipe \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while adding user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Une erreur s'est produite lors de l'ajout de l'utilisateur en tant qu'administrateur"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "L'utilisateur \"{0}\" a été supprimé en tant qu'administrateur pour l'équipe \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Une erreur s'est produite lors de la suppression de l'utilisateur en tant qu'administrateur"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as member from team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "L'utilisateur \"{0}\" a été supprimé de l'équipe \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as team member"
-msgstr ""
-
-#. placeholder {0}: modelName
+msgstr "Une erreur s'est produite lors de la suppression du membre de l'équipe"#. placeholder {0}: modelName
 #: src/lib/dp/components/utils/DeleteButton.svelte
 msgid "Error deleting {0}."
-msgstr ""
-
-#: src/lib/dp/components/player/TeamPlayerSection.svelte
+msgstr "Erreur lors de la suppression de {0}."#: src/lib/dp/components/player/TeamPlayerSection.svelte
 msgid "Visualization <0>NumberImage</0>"
-msgstr ""
-
-#: src/routes/(tib)/gamecenter/+page.svelte
+msgstr "Visualisation <0>NumberImage</0>"#: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Previous"
-msgstr ""
+msgstr "Précédent"
 
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Current"
-msgstr ""
+msgstr "Actuel"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Next"
-msgstr ""
+msgstr "Suivant"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "All"
-msgstr ""
+msgstr "Tous"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Timeframe"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Période"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Sort"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Trier"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Ascending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Croissant"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Descending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Décroissant"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Other"
+msgstr "Autre"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "<0/> Create new"
+msgstr "<0/> Créer nouveau"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "Create new Community Service Entry"
+msgstr "Créer une nouvelle entrée de service communautaire"#: src/lib/dp/components/navigation/NavigationSheet.svelte
+msgid "Diamond Planner Logo"
+msgstr "Logo Diamond Planner"#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Community Service Entry"
+msgstr "Entrée de service communautaire"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Date <0/>"
+msgstr "Date <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Duration"
+msgstr "Durée"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Minutes <0/>"
+msgstr "Minutes <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Board Member <0/>"
+msgstr "Membre du conseil <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Member <0/>"
+msgstr "Membre <0/>"#: src/lib/dp/auth/LoginForm.svelte
+msgid "Sign in to Diamond Planner"
+msgstr "Se connecter à Diamond Planner"#: src/lib/dp/components/meta/SidebarNavigation.svelte
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "Community Service"
+msgstr "Service communautaire"#. placeholder {0}: entry.title
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+msgid "Edit Community Service Entry \"{0}\""
+msgstr "Modifier l'entrée de service communautaire \"{0}\""#: src/lib/dp/components/communityservice/TargetVisualizer.svelte
+msgid "Target:"
+msgstr "Cible :"#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
+msgid ""
+"You have the option to display your player data in your public\n"
+"profile on the website and apps."
 msgstr ""
+"Vous avez la possibilité d'afficher vos données de joueur dans votre profil public\n"
+"sur le site web et les applications."#. placeholder {0}: set.user.first_name
+#. placeholder {1}: set.user.last_name
+#. placeholder {2}: set.season
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "for {0} {1} ({2})"
+msgstr "pour {0} {1} ({2})"
