--- a/src/locales/pl.po
+++ b/src/locales/pl.po
@@ -37,7 +37,6 @@ msgstr "Wyloguj się"
 msgid "Berlin Skylarks Web App"
 msgstr "Aplikacja webowa Berlin Skylarks"
 
-#: src/lib/dp/components/navigation/NavigationSheet.svelte
 #: src/routes/+layout.svelte
 msgid "Skylarks Team Logo"
 msgstr "Logo drużyny Skylarks"
@@ -56,6 +55,7 @@ msgstr "E-mail <0/> <1>Zostaniesz wylogowany i poproszony o zweryfikowanie noweg
 
 #: src/lib/dp/auth/ChangeEmailForm.svelte
 #: src/lib/dp/auth/PasswordRequestButton.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/UserDetailsForm.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/utils/DeleteButton.svelte
@@ -100,10 +100,6 @@ msgstr "Zapomniałeś hasła?"
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Reset Password"
 msgstr "Zresetuj hasło"
-
-#: src/lib/dp/auth/LoginForm.svelte
-msgid "Sign in to Skylarks Diamond Planner"
-msgstr "Zaloguj się do Skylarks Diamond Planner"
 
 #: src/lib/dp/auth/LoginForm.svelte
 msgid "Log In"
@@ -252,6 +248,7 @@ msgstr ""
 msgid "Cancel"
 msgstr "Anuluj"
 
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
 #: src/routes/(tib)/club/+page.svelte
 msgid "Details"
 msgstr "Szczegóły"
@@ -260,7 +257,6 @@ msgstr "Szczegóły"
 msgid "More Info"
 msgstr "Więcej informacji"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/player/PlayerDataCard.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/club/+page.svelte
@@ -401,7 +397,6 @@ msgstr "DP:"
 msgid "TP:"
 msgstr "TP:"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 #: src/routes/(tib)/ligen/+page.svelte
 msgid "Leagues"
@@ -439,6 +434,7 @@ msgstr "Ładowanie lig..."
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
 #: src/routes/(tib)/club/ballpark/+page.svelte
@@ -503,7 +499,6 @@ msgstr "Play-offy"
 msgid "Graphs and Mood"
 msgstr "Wykresy i nastrój"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamAdminSection.svelte
 #: src/lib/tib/components/match/GamecenterMatchSection.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
@@ -952,7 +947,7 @@ msgstr "Zweryfikowany"
 msgid "Unverified"
 msgstr "Niezweryfikowany"
 
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 #: src/lib/dp/components/forms/TeamGamesModal.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
@@ -1168,7 +1163,6 @@ msgstr "Wyślij"
 #: src/lib/dp/components/club/ClubDetailCard.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
 #: src/lib/dp/components/forms/ClubForm.svelte
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/dp/components/team/TeamListTeaser.svelte
 #: src/lib/dp/components/team/TeamTeaserCard.svelte
 #: src/lib/dp/components/user/PlayerProfileClubsSection.svelte
@@ -1279,6 +1273,7 @@ msgstr "Koniec serii <0/> <1>Po tej dacie nie będą tworzone żadne wydarzenia.
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 msgid "Title <0/>"
 msgstr "Tytuł <0/>"
 
@@ -1292,6 +1287,7 @@ msgstr "Czas trwania <0/> <1>Czas trwania każdego wydarzenia, aby określić go
 
 #: src/lib/dp/components/forms/EventForm.svelte
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Description <0/>"
 msgstr "Opis <0/>"
@@ -1334,6 +1330,7 @@ msgstr "Utwórz Nową Drużynę"
 msgid "Name <0/>"
 msgstr "Nazwa <0/>"
 
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Club <0/>"
 msgstr "Klub <0/>"
@@ -1807,12 +1804,10 @@ msgstr "Seria"
 msgid "Player fallback"
 msgstr "Gracz rezerwowy"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Start"
 msgstr "Start"
 
-#: src/lib/dp/components/navigation/StaticNavigationLinks.svelte
 #: src/lib/tib/components/navigation/StaticNavigationLinks.svelte
 msgid "Favorite"
 msgstr "Ulubione"
@@ -1905,13 +1900,13 @@ msgstr "Średnia Skuteczność Gry w Polu"
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "Nie możesz usunąć ostatniego {0}!"
 
 #. placeholder {0}: itemName
 #. placeholder {0}: itemName
-#: src/lib/dp/components/form/MultiSelectCombobox.svelte
+#: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
 msgstr "Wybierz, aby dodać jako {0}:"
 
@@ -2312,14 +2307,6 @@ msgstr "Profil publiczny"
 
 #: src/lib/dp/components/user/PlayerDataProfileSection.svelte
 msgid ""
-"You have the option to display your player data in your public\n"
-"profile on the Skylarks website and apps."
-msgstr ""
-"Możesz wyświetlać swoje dane gracza w swoim profilu publicznym\n"
-"na stronie internetowej i w aplikacjach Skylarks."
-
-#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
-msgid ""
 "Please note that all statistics and basic info such as your name and\n"
 "team affiliation is considered public information when participating\n"
 "in official DBV and BSVBB competitions."
@@ -2416,7 +2403,7 @@ msgstr "Względny czas"
 msgid "Stats for {0} {1}"
 msgstr "Statystyki dla {0} {1}"
 
-#: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
+#: src/lib/dp/components/utils/SeasonSelector.svelte
 msgid "Season <0/>"
 msgstr "Sezon <0/>"
 
@@ -2793,19 +2780,19 @@ msgstr "Suma wygranych"
 msgid "There was an error processing your authentication request."
 msgstr "Wystąpił błąd podczas przetwarzania twojego żądania uwierzytelnienia."
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Enter"
 msgstr "Enter"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Backspace"
 msgstr "Backspace"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "Remove tag"
 msgstr "Usuń tag"
 
-#: src/lib/dp/components/form/TagsInput.svelte
+#: src/lib/dp/components/formElements/TagsInput.svelte
 msgid "You have entered a value that is not allowed here."
 msgstr "Wprowadzono niedozwoloną wartość."
 
@@ -2863,124 +2850,124 @@ msgstr "Brak dostępnych danych."
 
 #: src/lib/dp/components/comments/CommentRow.svelte
 msgid "Error updating comment"
-msgstr ""
-
-#: src/lib/dp/components/comments/CommentSection.svelte
+msgstr "Błąd podczas aktualizacji komentarza"#: src/lib/dp/components/comments/CommentSection.svelte
 msgid "Failed to add comment."
-msgstr ""
-
-#: src/lib/dp/auth/OAuthProviderButton.svelte
+msgstr "Nie udało się dodać komentarza."#: src/lib/dp/auth/OAuthProviderButton.svelte
 msgid "There was an error processing your authentication request via external provider. Please double-check your signup key"
-msgstr ""
-
-#. placeholder {0}: email
+msgstr "Wystąpił błąd podczas przetwarzania żądania uwierzytelnienia przez zewnętrznego dostawcę. Sprawdź ponownie swój klucz rejestracji."#. placeholder {0}: email
 #: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "If we have your email ({0}) on file, you will receive a reset password request in your inbox."
-msgstr ""
-
-#: src/lib/dp/auth/PasswordRequestButton.svelte
+msgstr "Jeśli mamy Twój adres e-mail ({0}) w bazie, otrzymasz prośbę o zresetowanie hasła w swojej skrzynce odbiorczej."#: src/lib/dp/auth/PasswordRequestButton.svelte
 msgid "Error sending reset password request."
-msgstr ""
-
-#: src/lib/dp/components/forms/UniformSetForm.svelte
+msgstr "Błąd podczas wysyłania prośby o zresetowanie hasła."#: src/lib/dp/components/forms/UniformSetForm.svelte
 msgid ""
 "You can use the special identifiers <0/> and <1/> to get\n"
 "the Skylarks Home and Road Cap instead of a\n"
 "generic colored one."
 msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+"Możesz użyć specjalnych identyfikatorów <0/> i <1/>, aby otrzymać\n"
+"czapkę Skylarks Home i Road zamiast\n"
+"generycznej kolorowej."#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been added as an admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "Użytkownik \"{0}\" został dodany jako administrator zespołu \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while adding user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Wystąpił błąd podczas dodawania użytkownika jako administratora"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as admin for team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "Użytkownik \"{0}\" został usunięty jako administrator zespołu \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as admin"
-msgstr ""
-
-#. placeholder {0}: model.first_name + " " + model.last_name
+msgstr "Wystąpił błąd podczas usuwania użytkownika jako administratora"#. placeholder {0}: model.first_name + " " + model.last_name
 #. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "User \"{0}\" has been removed as member from team \"{1}\""
-msgstr ""
-
-#: src/lib/dp/components/team/TeamMembersTableContent.svelte
+msgstr "Użytkownik \"{0}\" został usunięty z zespołu \"{1}\""#: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "An error occurred while removing user as team member"
-msgstr ""
-
-#: src/lib/dp/components/forms/TeamMembersForm.svelte
+msgstr "Wystąpił błąd podczas usuwania członka zespołu"#: src/lib/dp/components/forms/TeamMembersForm.svelte
 #: src/lib/dp/components/forms/TeamMembersForm.svelte
 msgid "Team members"
-msgstr ""
-
-#: src/lib/dp/components/forms/ParticipationForm.svelte
+msgstr "Członkowie zespołu"#: src/lib/dp/components/forms/ParticipationForm.svelte
 msgid "State <0>InMaybeOut</0>"
-msgstr ""
-
-#. placeholder {0}: modelName
+msgstr "Stan <0>InMaybeOut</0>"#. placeholder {0}: modelName
 #: src/lib/dp/components/utils/DeleteButton.svelte
 msgid "Error deleting {0}."
-msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+msgstr "Błąd podczas usuwania {0}."#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Game"
-msgstr ""
-
-#: src/lib/dp/components/event/EventTypeBadge.svelte
+msgstr "Mecz"#: src/lib/dp/components/event/EventTypeBadge.svelte
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Practice"
-msgstr ""
-
-#: src/lib/dp/components/player/TeamPlayerSection.svelte
+msgstr "Trening"#: src/lib/dp/components/player/TeamPlayerSection.svelte
 msgid "Visualization <0>NumberImage</0>"
-msgstr ""
-
-#: src/routes/(tib)/gamecenter/+page.svelte
+msgstr "Wizualizacja <0>NumberImage</0>"#: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Previous"
-msgstr ""
+msgstr "Poprzedni"
 
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Current"
-msgstr ""
+msgstr "Aktualny"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "Next"
-msgstr ""
+msgstr "Następny"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 #: src/routes/(tib)/gamecenter/+page.svelte
 msgid "All"
-msgstr ""
+msgstr "Wszystkie"
 
 #: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Timeframe"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Zakres czasu"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Sort"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Sortuj"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Ascending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Rosnąco"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Descending"
-msgstr ""
-
-#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
+msgstr "Malejąco"#: src/routes/(dp)/(protected)/account/team/[id]/+page.svelte
 msgid "Other"
+msgstr "Inne"#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Community Service Entry"
+msgstr "Wpis prac społecznych"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Date <0/>"
+msgstr "Data <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Duration"
+msgstr "Czas trwania"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Minutes <0/>"
+msgstr "Minuty <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Board Member <0/>"
+msgstr "Członek zarządu <0/>"#: src/lib/dp/components/forms/ServiceEntryForm.svelte
+msgid "Member <0/>"
+msgstr "Członek <0/>"#: src/lib/dp/components/navigation/NavigationSheet.svelte
+msgid "Diamond Planner Logo"
+msgstr "Logo Diamond Planner"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "<0/> Create new"
+msgstr "<0/> Utwórz nowy"#: src/lib/dp/components/communityservice/CommunityServiceSection.svelte
+msgid "Create new Community Service Entry"
+msgstr "Utwórz nowy wpis prac społecznych"#: src/lib/dp/auth/LoginForm.svelte
+msgid "Sign in to Diamond Planner"
+msgstr "Zaloguj się do Diamond Planner"#: src/lib/dp/components/meta/SidebarNavigation.svelte
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "Community Service"
+msgstr "Prace społeczne"#. placeholder {0}: entry.title
+#: src/lib/dp/components/communityservice/CommunityServiceItemCard.svelte
+msgid "Edit Community Service Entry \"{0}\""
+msgstr "Edytuj wpis prac społecznych \"{0}\""#: src/lib/dp/components/communityservice/TargetVisualizer.svelte
+msgid "Target:"
+msgstr "Cel:"#: src/lib/dp/components/user/PlayerDataProfileSection.svelte
+msgid ""
+"You have the option to display your player data in your public\n"
+"profile on the website and apps."
 msgstr ""
+"Masz możliwość wyświetlania swoich danych zawodnika w publicznym profilu\n"
+"na stronie internetowej i w aplikacjach."#. placeholder {0}: set.user.first_name
+#. placeholder {1}: set.user.last_name
+#. placeholder {2}: set.season
+#: src/routes/(dp)/(protected)/account/[user]/communityservice/+page.svelte
+msgid "for {0} {1} ({2})"
+msgstr "dla {0} {1} ({2})"
